Update GitHub repository references
Replace placeholder OWNER with actual GitHub username (briannadoubt) in:
- Homebrew formula
- GitHub Actions workflows
- Documentation (README, RELEASE, HOMEBREW_TAP)
- Setup checklist

This makes all the Homebrew installation commands and documentation
ready to use without manual placeholder replacement.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
 
             ### Homebrew (Recommended)
             ```bash
-            brew tap OWNER/compote
+            brew tap briannadoubt/compote
             brew install compote
             ```
 
