Update Homebrew tap references
Change from 'briannadoubt/compote' to 'briannadoubt/tap' since
the formula is now hosted in the homebrew-tap repository.

This tap will host multiple CLI tools, not just Compote.

Installation is now:
  brew tap briannadoubt/tap
  brew install compote

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,7 @@ jobs:
 
             ### Homebrew (Recommended)
             ```bash
-            brew tap briannadoubt/compote
+            brew tap briannadoubt/tap
             brew install compote
             ```
 
