ci: replace release action with gh release cli steps

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,40 +34,61 @@ jobs:
           shasum -a 256 compote-${{ github.ref_name }}-macos-arm64.tar.gz > compote-${{ github.ref_name }}-macos-arm64.tar.gz.sha256
 
       - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
-        with:
-          draft: false
-          prerelease: ${{ contains(github.ref_name, 'alpha') || contains(github.ref_name, 'beta') || contains(github.ref_name, 'rc') }}
-          generate_release_notes: true
-          files: |
-            compote-${{ github.ref_name }}-macos-arm64.tar.gz
-            compote-${{ github.ref_name }}-macos-arm64.tar.gz.sha256
-          body: |
-            ## Installation
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          set -euo pipefail
+          TAG="${{ github.ref_name }}"
+          ARCHIVE="compote-${TAG}-macos-arm64.tar.gz"
+          CHECKSUM="${ARCHIVE}.sha256"
 
-            ### Homebrew (Recommended)
-            ```bash
-            brew tap briannadoubt/tap
-            brew install compote
-            ```
+          RELEASE_NOTES=$(cat <<EOF
+          ## Installation
 
-            ### Manual Installation
-            ```bash
-            # Download and extract
-            tar -xzf compote-${{ github.ref_name }}-macos-arm64.tar.gz
-            sudo mv compote /usr/local/bin/
+          ### Homebrew (Recommended)
+          \`\`\`bash
+          brew tap briannadoubt/tap
+          brew install compote
+          \`\`\`
 
-            # Install dependencies
-            brew install containerization
-            ```
+          ### Manual Installation
+          \`\`\`bash
+          # Download and extract
+          tar -xzf ${ARCHIVE}
+          sudo mv compote /usr/local/bin/
 
-            ### Verify Installation
-            ```bash
-            compote setup
-            ```
+          # Install dependencies
+          brew install containerization
+          \`\`\`
 
-            ## What's Changed
-            See the full changelog below.
+          ### Verify Installation
+          \`\`\`bash
+          compote setup
+          \`\`\`
+
+          ## What's Changed
+          See the full changelog below.
+          EOF
+          )
+
+          PRERELEASE_FLAG=""
+          if [[ "${TAG}" == *alpha* || "${TAG}" == *beta* || "${TAG}" == *rc* ]]; then
+            PRERELEASE_FLAG="--prerelease"
+          fi
+
+          if gh release view "${TAG}" >/dev/null 2>&1; then
+            gh release edit "${TAG}" ${PRERELEASE_FLAG} --draft=false --notes "${RELEASE_NOTES}"
+          else
+            gh release create "${TAG}" \
+              ${PRERELEASE_FLAG} \
+              --draft=false \
+              --generate-notes \
+              --notes "${RELEASE_NOTES}" \
+              "${ARCHIVE}" \
+              "${CHECKSUM}"
+          fi
+
+          gh release upload "${TAG}" "${ARCHIVE}" "${CHECKSUM}" --clobber
 
   build-bottle:
     name: Build Homebrew Bottle
