--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,54 @@ jobs:
         run: |
           swift test
 
+      - name: Configure macOS signing keychain
+        env:
+          MACOS_CERTIFICATE_P12: ${{ secrets.MACOS_CERTIFICATE_P12 }}
+          MACOS_CERTIFICATE_PASSWORD: ${{ secrets.MACOS_CERTIFICATE_PASSWORD }}
+          MACOS_KEYCHAIN_PASSWORD: ${{ secrets.MACOS_KEYCHAIN_PASSWORD }}
+        run: |
+          set -euo pipefail
+
+          if [[ -z "${MACOS_CERTIFICATE_P12}" || -z "${MACOS_CERTIFICATE_PASSWORD}" || -z "${MACOS_KEYCHAIN_PASSWORD}" ]]; then
+            echo "Missing required signing secrets. Configure MACOS_CERTIFICATE_P12, MACOS_CERTIFICATE_PASSWORD, and MACOS_KEYCHAIN_PASSWORD." >&2
+            exit 1
+          fi
+
+          CERT_PATH="$RUNNER_TEMP/compote-signing-cert.p12"
+          KEYCHAIN_PATH="$RUNNER_TEMP/compote-signing.keychain-db"
+
+          echo -n "${MACOS_CERTIFICATE_P12}" | base64 --decode > "$CERT_PATH"
+
+          security create-keychain -p "${MACOS_KEYCHAIN_PASSWORD}" "$KEYCHAIN_PATH"
+          security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
+          security unlock-keychain -p "${MACOS_KEYCHAIN_PASSWORD}" "$KEYCHAIN_PATH"
+          security import "$CERT_PATH" -P "${MACOS_CERTIFICATE_PASSWORD}" -A -t cert -f pkcs12 -k "$KEYCHAIN_PATH"
+          security list-keychains -d user -s "$KEYCHAIN_PATH"
+          security default-keychain -d user -s "$KEYCHAIN_PATH"
+          security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "${MACOS_KEYCHAIN_PASSWORD}" "$KEYCHAIN_PATH"
+
+      - name: Sign release binary
+        env:
+          MACOS_SIGNING_IDENTITY: ${{ secrets.MACOS_SIGNING_IDENTITY }}
+        run: |
+          set -euo pipefail
+
+          if [[ -z "${MACOS_SIGNING_IDENTITY}" ]]; then
+            echo "Missing required signing secret: MACOS_SIGNING_IDENTITY." >&2
+            exit 1
+          fi
+
+          codesign \
+            --force \
+            --timestamp \
+            --options runtime \
+            --sign "${MACOS_SIGNING_IDENTITY}" \
+            --entitlements .github/entitlements/compote.entitlements \
+            .build/release/compote
+
+          codesign --verify --strict --verbose=2 .build/release/compote
+          codesign -d --entitlements :- .build/release/compote
+
       - name: Create Release Archive
         run: |
           mkdir -p release
@@ -58,7 +106,8 @@ jobs:
           sudo mv compote /usr/local/bin/
 
           # Install dependencies
-          brew install containerization
+          brew install container
+          container system start
           \`\`\`
 
           ### Verify Installation
@@ -89,6 +138,12 @@ jobs:
           fi
 
           gh release upload "${TAG}" "${ARCHIVE}" "${CHECKSUM}" --clobber
+
+      - name: Cleanup signing keychain
+        if: always()
+        run: |
+          KEYCHAIN_PATH="$RUNNER_TEMP/compote-signing.keychain-db"
+          security delete-keychain "$KEYCHAIN_PATH" || true
 
   build-bottle:
     name: Build Homebrew Bottle
