--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,5 +22,4 @@ jobs:
         run: swift build -c release
 
       - name: Test formula syntax
-        run: |
-          brew audit --strict ./Formula/compote.rb || true
+        run: ruby -c Formula/compote.rb
